--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Bootstrap 3, from LayoutIt!</title>
+    <title>Web Design By Miguel Perez</title>
 
     <meta name="description" content="Source code generated using layoutit.com">
     <meta name="author" content="LayoutIt!">
@@ -20,7 +20,7 @@
 	<div class="row">
 		<div class="col-md-12">
 			<h3>
-				h3. Lorem ipsum dolor sit amet.
+				This website was created by Miguel Perez!
 			</h3>
 		</div>
 	</div>
