--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
 			</h3>
 		</div>
 	</div>
-	
-	</div>
+	<div class="row">
+		<div class="col-md-6">
+			<img alt="Bootstrap Image Preview" src="http://lorempixel.com/140/140/">
+		</div>
 	<div class="row">
 		<div class="col-md-12">
 			<div class="carousel slide" id="carousel-796656">
