--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 						<img alt="Carousel Bootstrap First" src="http://lorempixel.com/output/sports-q-c-1600-500-1.jpg">
 						<div class="carousel-caption">
 							<h4>
-								First Thumbnail label
+								Dude with a bat above
 							</h4>
 							<p>
-								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+								This is a sample text to fit the paragraph that I have within the source code!!!
 							</p>
 						</div>
 					</div>
@@ -47,10 +47,10 @@
 						<img alt="Carousel Bootstrap Second" src="http://lorempixel.com/output/sports-q-c-1600-500-2.jpg">
 						<div class="carousel-caption">
 							<h4>
-								Second Thumbnail label
+								Dude Surfing above
 							</h4>
 							<p>
-								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+								This is my second sample text to fit in this paragraph that I have within the source code!!!
 							</p>
 						</div>
 					</div>
@@ -58,10 +58,10 @@
 						<img alt="Carousel Bootstrap Third" src="http://lorempixel.com/output/sports-q-c-1600-500-3.jpg">
 						<div class="carousel-caption">
 							<h4>
-								Third Thumbnail label
+								Dude riding a bike above
 							</h4>
 							<p>
-								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+								This is my third sample text to fit in this paragraph that I have in the source code!!!
 							</p>
 						</div>
 					</div>
