--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 	<div class="row">
 		<div class="col-md-6">
 			<p>
-				Lorem ipsum dolor sit amet, <strong>consectetur adipiscing elit</strong>. Aliquam eget sapien sapien. Curabitur in metus urna. In hac habitasse platea dictumst. Phasellus eu sem sapien, sed vestibulum velit. Nam purus nibh, lacinia non faucibus et, pharetra in dolor. Sed iaculis posuere diam ut cursus. <em>Morbi commodo sodales nisi id sodales. Proin consectetur, nisi id commodo imperdiet, metus nunc consequat lectus, id bibendum diam velit et dui.</em> Proin massa magna, vulputate nec bibendum nec, posuere nec lacus. <small>Aliquam mi erat, aliquam vel luctus eu, pharetra quis elit. Nulla euismod ultrices massa, et feugiat ipsum consequat eu.</small>
+				I will now write a bold text, <strong>Bold Text</strong>. I will now write an italicised text, <em>italicised text.</em> I will now write in small text, <small>small font.</small>
 			</p>
 		</div>
 		<div class="col-md-6">
@@ -81,28 +81,28 @@
 					Description lists
 				</dt>
 				<dd>
-					A description list is perfect for defining terms.
+					This is a small amount of text from the description list.
 				</dd>
 				<dt>
-					Euismod
+					Subtitle of Description list 1
 				</dt>
 				<dd>
-					Vestibulum id ligula porta felis euismod semper eget lacinia odio sem nec elit.
+					This is a small amount of text from the subtitle of description list 1.
 				</dd>
 				<dd>
-					Donec id elit non mi porta gravida at eget metus.
-				</dd>
-				<dt>
-					Malesuada porta
-				</dt>
-				<dd>
-					Etiam porta sem malesuada magna mollis euismod.
+					This is another layer of text that goes with subtitle 1.
 				</dd>
 				<dt>
-					Felis euismod semper eget lacinia
+					Subtitle of Description list 2
 				</dt>
 				<dd>
-					Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+					This is a small text for subtitle 2.
+				</dd>
+				<dt>
+					Subtitle of Description list 3
+				</dt>
+				<dd>
+					This is the final text for the description list.
 				</dd>
 			</dl>
 		</div>
@@ -113,70 +113,70 @@
 				<div class="col-md-3">
 					 
 					<address>
-						 <strong>Twitter, Inc.</strong><br> 795 Folsom Ave, Suite 600<br> San Francisco, CA 94107<br> <abbr title="Phone">P:</abbr> (123) 456-7890
+						 <strong>Miguel Perez, Web Design.</strong><br> Random Address<br> Random City, State Zip<br> <abbr title="Phone">P:</abbr> (270) 111-1111
 					</address>
 				</div>
 				<div class="col-md-3">
 					<ul>
 						<li>
-							Lorem ipsum dolor sit amet
+							Bullet List 1
 						</li>
 						<li>
-							Consectetur adipiscing elit
+							Bullet List 2
 						</li>
 						<li>
-							Integer molestie lorem at massa
+							Bullet List 3
 						</li>
 						<li>
-							Facilisis in pretium nisl aliquet
+							Bullet List 4
 						</li>
 						<li>
-							Nulla volutpat aliquam velit
+							Bullet List 5
 						</li>
 						<li>
-							Faucibus porta lacus fringilla vel
+							Bullet List 6
 						</li>
 						<li>
-							Aenean sit amet erat nunc
+							Bullet List 7
 						</li>
 						<li>
-							Eget porttitor lorem
+							Bullet List 8
 						</li>
 					</ul>
 				</div>
 				<div class="col-md-3">
 					<ol>
 						<li>
-							Lorem ipsum dolor sit amet
+							Number List 1
 						</li>
 						<li>
-							Consectetur adipiscing elit
+							Number List 2
 						</li>
 						<li>
-							Integer molestie lorem at massa
+							Number List 3
 						</li>
 						<li>
-							Facilisis in pretium nisl aliquet
+							Number List 4
 						</li>
 						<li>
-							Nulla volutpat aliquam velit
+							Number List 5
 						</li>
 						<li>
-							Faucibus porta lacus fringilla vel
+							Number List 6
 						</li>
 						<li>
-							Aenean sit amet erat nunc
+							Number List 7
 						</li>
 						<li>
-							Eget porttitor lorem
+							Number List 8
 						</li>
 					</ol>
 				</div>
 				<div class="col-md-3">
 					<blockquote>
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
-						</p> <small>Someone famous <cite>Source Title</cite></small>
+							"I LOVE Blackboard, I LOVE Blackboard."
+						</p> <small>Brian Pringle <cite>Now working in Minnesota</cite></small>
 					</blockquote>
 				</div>
 			</div>
